syntax = "proto3";

package codehorse.maudit.audit;

option go_package = "github.com/solodba/devcloud/maudit/apps/audit";

// 导入外部包
// import "apps/audit/pb/audit.proto";
import "common/pb/github.com/solodba/mcube/pb/page/page.proto";

// 用户审计功能接口
service RPC {
    // 保存审计日志
    // rpc SaveAuditLog(AuditLog) returns(AuditLog);
    // 查询审计日志
    // rpc QueryAuditLog(QueryAuditLogRequest) returns(AuditLogSet);
}

// QueryAuditLogRequest结构体
message QueryAuditLogRequest {
    // @gotags: bson:",inline" json:"page"
    codehorse.mcube.page.PageRequest page = 1;
}